--- a/README
+++ b/README
@@ -1,24 +1,30 @@
 //**********************************************************
-// DESARROLLO DE SOFTWARE II
-// TALLER: PATRON-DAO
+// FUNDAMENTOS DE ANÁLISIS Y DISEÑO DE ALGORITMOS
+// MINIPROYECTO 1: SOLUCIÓN PARA UN JUEGO DE LÓGICA: AKARI
 //
 // PROYECTO DE SOFTWARE EN JAVA (JDK1.6)
 // USANDO IDE: NetBeans
 //
-// WEB PAGE: http://gustalibreros.github.com/PATRON-DAO/
+// WEB PAGE:
 //
-// FECHA INICIACION: Marzo 29 2012
+// FECHA INICIACION: 9 de Mayo de 2012
 //
 // AUTORES:
-// Gustavo Adolfo Rodriguez    
-// gustalibreros@hotmail.com
+//     Marx Arturo Arias - 0840247-3743
+//     marxarturoariasescobar@gmail.com
 //
-// José Antonio Nobile Rendón  
-// jose.nobile@gmail.com
+//     Luis Jeferson Gallardo - 
+//     luisjhefeerson@gmail.com
 //
-// Roberto Ceballos            
-// robertrock2000@gmail.com
+//     Fidel Herney Palacios - 0832691-3743
+//     herney400@gmail.com
+//
+//     James Andrés Payan - 0957150-2711
+//     jamespayan@gmail.com
+//
+//     Gustavo Adolfo Rodriguez - 0932979-3743    
+//     gustalibreros@gmail.com
 //
 // ESCUELA DE INGENIERIA DE SISTEMAS Y COMPUTACION
 // UNIVERSIDAD DEL VALLE
-//*********************************************************
+//**********************************************************
