--- a/README
+++ b/README
@@ -5,7 +5,7 @@
 // PROYECTO DE SOFTWARE EN JAVA (JDK1.6)
 // USANDO IDE: NetBeans
 //
-// WEB PAGE:
+// WEB PAGE: http://gustalibreros.github.com/MINIPROYECTO1_FADA
 //
 // FECHA INICIACION: 9 de Mayo de 2012
 //
